--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "should": "^6.0.1"
   },
   "devDependencies": {
-    "mocha": "^2.2.4"
+    "mocha": "^2.2.4",
+    "q": "^1.3.0"
   },
   "scripts": {
     "test": "./node_modules/mocha/bin/mocha ./test"
