--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "mtr",
   "version": "0.0.1",
-  "description": "Import MongoDB database to and from RethinkDB",
+  "description": "MongoDB <--> RethinkDB : Import MongoDB database into RethinkDB. Import RethinkDB databases into MongoDB.",
   "main": "lib/mtr.js",
   "dependencies": {
     "bluebird": "^2.9.25",
@@ -28,7 +28,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/thejsj/motore.git"
+    "url": "https://github.com/thejsj/mtr.git"
   },
   "keywords": [
     "mongo",
@@ -42,7 +42,7 @@
   "author": "thejsj",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/thejsj/motore/issues"
+    "url": "https://github.com/thejsj/mtr/issues"
   },
-  "homepage": "https://github.com/thejsj/motore"
+  "homepage": "https://github.com/thejsj/mtr"
 }
