--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
   },
   "scripts": {
     "test": "./node_modules/mocha/bin/mocha ./test",
-    "test-drivers": "./node_modules/mocha/bin/mocha ./test/drivers",
+    "test-clients": "./node_modules/mocha/bin/mocha ./test/clients",
     "test-import": "./node_modules/mocha/bin/mocha ./test/import"
   },
   "repository": {
