--- a/package.json
+++ b/package.json
@@ -7,19 +7,18 @@
     "bluebird": "^2.9.25",
     "cli": "^0.6.6",
     "lodash": "^3.8.0",
-    "mongo-client": "^0.2.1",
     "mongodb": "^2.0.28",
-    "q": "^1.3.0",
     "rethinkdb": "^2.0.0",
-    "rethinkdb-init": "^0.0.3",
-    "should": "^6.0.1"
+    "rethinkdb-init": "^0.0.3"
   },
   "prferGlobal": true,
   "bin": {
     "mtr": "bin/mtr.js"
   },
   "devDependencies": {
-    "mocha": "^2.2.4"
+    "mocha": "^2.2.4",
+    "should": "^6.0.1",
+    "q": "^1.3.0"
   },
   "scripts": {
     "test": "./node_modules/mocha/bin/mocha ./test",
