--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "mtr",
+  "name": "m2r",
   "version": "0.0.1",
   "description": "MongoDB <--> RethinkDB : Import MongoDB database into RethinkDB. Import RethinkDB databases into MongoDB.",
-  "main": "lib/mtr.js",
+  "main": "lib/m2r.js",
   "dependencies": {
     "bluebird": "^2.9.25",
     "cli": "^0.6.6",
@@ -13,7 +13,7 @@
   },
   "prferGlobal": true,
   "bin": {
-    "mtr": "bin/mtr.js"
+    "m2r": "bin/m2r.js"
   },
   "devDependencies": {
     "mocha": "^2.2.4",
@@ -29,7 +29,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/thejsj/mtr.git"
+    "url": "https://github.com/thejsj/m2r.git"
   },
   "keywords": [
     "mongo",
@@ -43,7 +43,7 @@
   "author": "thejsj",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/thejsj/mtr/issues"
+    "url": "https://github.com/thejsj/m2r/issues"
   },
-  "homepage": "https://github.com/thejsj/mtr"
+  "homepage": "https://github.com/thejsj/m2r"
 }
